<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.EditarCarroActivity"
    android:layout_margin="@dimen/margem"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/textAppearanceMedium"
        android:text="@string/txt_nome" />

    <EditText
        android:id="@+id/edt_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/textAppearanceMedium"
        android:text="@string/txt_marca" />

    <EditText
        android:id="@+id/edt_marca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/textAppearanceMedium"
        android:text="@string/txt_motor" />

    <EditText
        android:id="@+id/edt_motor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/btnCancelar"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_cancel" />

        <Button
            android:id="@+id/btnProcessar"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_ok" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:id="@+id/img"
            android:layout_height="wrap_content"
            android:src="@drawable/carro_veio"
            android:layout_gravity="center" />

    </FrameLayout>

</LinearLayout>